estrutura de dados pt2

--- a/Data Science/grafico_bibliotecas_com_python/funcao_estrutura_exception.ipynb
+++ b/Data Science/grafico_bibliotecas_com_python/funcao_estrutura_exception.ipynb
@@ -199,19 +199,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "2d1ed694",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1° trimenstre': 70, '2° trimenstre': 89, '3° trimenstre': 79, '4° trimenstre': 24}\n",
-      "A média anual dos estudantes foi, com notas aleatórias: 65.5, logo ele está Aprovado.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#notas aleatorias com random\n",
     "from random import randint\n",
@@ -240,18 +231,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "8775df2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "86.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#função de media com list\n",
     "\n",
@@ -263,19 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "c6b4cfc2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.5\n",
-      "7.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#funções lambda\n",
     "\n",
@@ -298,19 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "b84b6067",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[25, 58, 29, 74, 72, 22, 4, 29, 75, 43]\n",
-      "Média: 43.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import randrange\n",
     "numeros_aleatorios = [randrange(0, 100) for _ in range(10)]\n",
@@ -321,18 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "25892b10",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[20, 40, 60, 80, 100]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#map + lambda\n",
     "valores = [10, 20, 30, 40, 50]\n",
@@ -342,21 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "f9ec69b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[32.0, 77.0, 98.6, 172.4, 212.0]"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp_celsius = [0, 25, 37, 78, 100]\n",
     "temp_fahrenheit = list(map(lambda x: (x * 9/5) + 32, temp_celsius))\n",
@@ -407,6 +353,7 @@
     "    media = sum(notas[1:4]) / 3\n",
     "    print(f\"Nota da manobra: {media}\")\n",
     "    return media\n",
+    "pontuacao_skatista()\n",
     "\n",
     "# EXERCÍCIO 6\n",
     "def analisa_estudante(notas):\n",
@@ -469,6 +416,253 @@
     "frase_tratada = frase.replace(',', ' ').replace('.', ' ').replace('!', ' ').replace('?', ' ')\n",
     "palavras_filtradas = list(filter(lambda palavra: len(palavra) >= 5, frase_tratada.split()))\n",
     "print(palavras_filtradas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "113718b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Henrique', 'Maria', 'João']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Lista de Listas\n",
+    "notas_turma_ex = ['Henrique', 8.0, 9.0, 10.0, 'Maria', 7.5, 8.5, 9.0, 'João', 6.0, 5.5, 7.0]\n",
+    "nomes = []\n",
+    "notas = []\n",
+    "for i in range(len(notas_turma_ex)):\n",
+    "    if i % 4 == 0:\n",
+    "        nomes.append(notas_turma_ex[i])\n",
+    "    else:\n",
+    "        notas.append(notas_turma_ex[i])\n",
+    "print(nomes)\n",
+    "print(notas)\n",
+    "\n",
+    "notas_ex = []\n",
+    "for i in range(0, len(notas), 3):\n",
+    "    notas_ex.append([notas[i], notas[i+1], notas[i+2]])\n",
+    "notas_ex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b27d3486",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Henrique', 8.0, 9.0, 10.0),\n",
+       " ('Maria', 7.5, 8.5, 9.0),\n",
+       " ('João', 6.0, 5.5, 7.0)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lista de tuplas\n",
+    "notas_turma_ex_2 = ['Henrique', 8.0, 9.0, 10.0, 'Maria', 7.5, 8.5, 9.0, 'João', 6.0, 5.5, 7.0]\n",
+    "dados = []\n",
+    "for i in range(0, len(notas_turma_ex_2), 4):\n",
+    "    dados.append((notas_turma_ex_2[i], notas_turma_ex_2[i+1], notas_turma_ex_2[i+2], notas_turma_ex_2[i+3]))\n",
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0194aa81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Henrique', 8.0, 9.0, 10.0),\n",
+       " ('Maria', 7.5, 8.5, 9.0),\n",
+       " ('João', 6.0, 5.5, 7.0)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#List comprehension\n",
+    "notas_turma_ex_3 = ['Henrique', 8.0, 9.0, 10.0, 'Maria', 7.5, 8.5, 9.0, 'João', 6.0, 5.5, 7.0]\n",
+    "dados_comprehension = [(notas_turma_ex_3[i], notas_turma_ex_3[i+1], notas_turma_ex_3[i+2], notas_turma_ex_3[i+3]) for i in range(0, len(notas_turma_ex_3), 4)]\n",
+    "dados_comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9485cf51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IDs =  ['J392', 'M890', 'J681', 'C325', 'A49']\n",
+      "Nomes =  ['João', 'Maria', 'José', 'Claúdia', 'Ana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "id = [1, 2, 3, 4, 5]\n",
+    "regiao = [\"Norte\", \"Nordeste\", \"Sudeste\", \"Centro-Oeste\", \"Sul\"]\n",
+    "\n",
+    "mapa = list(zip(id, regiao))\n",
+    "mapa\n",
+    "\n",
+    "tupla_iteravel = [('J392', 'João'), ('M890', 'Maria'), ('J681', 'José'), ('C325', 'Claúdia'), ('A49', 'Ana')]\n",
+    "ids, nomes  = zip(*tupla_iteravel)\n",
+    "\n",
+    "ids = list(ids)\n",
+    "nomes = list(nomes)\n",
+    "\n",
+    "print(\"IDs = \", ids)\n",
+    "print(\"Nomes = \", nomes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4ba05092",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Notas': [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]], 'Media Final': [9.0, 7.3, 5.8, 6.7, 8.5], 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Notas': [[8.0, 9.0, 10.0],\n",
+       "  [9.0, 7.0, 6.0],\n",
+       "  [3.4, 7.0, 7.0],\n",
+       "  [5.5, 6.6, 8.0],\n",
+       "  [6.0, 10.0, 9.5]],\n",
+       " 'Media Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+       " 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado'],\n",
+       " 'Estudante': ['João', 'Maria', 'José', 'Cláudia', 'Ana']}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Criar dicionário a partir da lista de dados dos estudantes\n",
+    "lista_completa = [[('João', 'J720'), ('Maria', 'M205'), ('José', 'J371'), ('Cláudia', 'C546'), ('Ana', 'A347')],\n",
+    "                  [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]],\n",
+    "                  [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+    "                  ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']]\n",
+    "\n",
+    "coluna = [\"Notas\", \"Media Final\", \"Situação\"]\n",
+    "\n",
+    "cadastro  = {coluna[i]: lista_completa[i+1] for i in range(len(coluna))}\n",
+    "\n",
+    "print(cadastro)\n",
+    "\n",
+    "\n",
+    "cadastro[\"Estudante\"] = [lista_completa[0][i][0] for i in range(len(lista_completa[0]))]\n",
+    "cadastro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e5c7a8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 código para imprimir a soma dos elementos de cada uma das listas contidas na seguinte lista:\n",
+    "lista_de_listas = [[4, 6, 5, 9], [1, 0, 7, 2], [3, 4, 1, 8]]\n",
+    "somas = [sum(sublista) for sublista in lista_de_listas]\n",
+    "print(somas)\n",
+    "\n",
+    "# 2 código para imprimir os terceiros elementos de cada uma das tuplas contidas na seguinte lista:\n",
+    "lista_de_tuplas = [('Pedro', 1.74, 81), ('Júlia', 1.65, 67), ('Otávio', 1.81, 83)]\n",
+    "terceiros = [t[2] for t in lista_de_tuplas]\n",
+    "print(terceiros)\n",
+    "\n",
+    "# 3 código para imprimir tuplas contendo a posição e o nome de cada elemento da lista:\n",
+    "lista = ['Pedro', 'Júlia', 'Otávio', 'Eduardo']\n",
+    "tuplas_posicao = [(i, nome) for i, nome in enumerate(lista)]\n",
+    "print(tuplas_posicao)\n",
+    "\n",
+    "# 4 código para imprimir os valores dos apartamentos na lista de aluguel:\n",
+    "aluguel = [('Apartamento', 1700), ('Apartamento', 1400), ('Casa', 2150), ('Apartamento', 1900), ('Casa', 1100)]\n",
+    "valores_ap = [valor for tipo, valor in aluguel if tipo == 'Apartamento']\n",
+    "print(valores_ap)\n",
+    "\n",
+    "# 5 código para criar um dicionário com meses e despesas correspondentes:\n",
+    "meses = ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']\n",
+    "despesa = [860, 490, 1010, 780, 900, 630, 590, 770, 620, 560, 840, 360]\n",
+    "gastos = {mes: valor for mes, valor in zip(meses, despesa)}\n",
+    "print(gastos)\n",
+    "\n",
+    "# 6 código para imprimir os valores das vendas do ano de 2022 que foram maiores que 6000:\n",
+    "vendas = [('2023', 4093), ('2021', 4320), ('2021', 5959), ('2022', 8883), ('2023', 9859), ('2022', 5141),\n",
+    "          ('2022', 7688), ('2022', 9544), ('2023', 4794), ('2021', 7178), ('2022', 3030), ('2021', 7471),\n",
+    "          ('2022', 4226), ('2022', 8190), ('2021', 9680), ('2022', 5616)]\n",
+    "vendas_2022 = [valor for ano, valor in vendas if ano == '2022' and valor > 6000]\n",
+    "print(vendas_2022)\n",
+    "\n",
+    "# 7 código para rotular os valores de glicemia conforme as faixas estabelecidas:\n",
+    "glicemia = [129, 82, 60, 97, 101, 65, 62, 167, 87, 53, 58, 92, 66, 120, 109, 62, 86, 96, 103, 88, 155, 52, 89, 73]\n",
+    "rotulos = [\n",
+    "    ('Hipoglicemia', g) if g <= 70 else\n",
+    "    ('Normal', g) if g <= 99 else\n",
+    "    ('Alterada', g) if g <= 125 else\n",
+    "    ('Diabetes', g)\n",
+    "    for g in glicemia\n",
+    "]\n",
+    "print(rotulos)\n",
+    "\n",
+    "# 8 código para criar uma tabela de vendas com id, quantidade, preço e total:\n",
+    "id = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "quantidade = [15, 12, 1, 15, 2, 11, 2, 12, 2, 4]\n",
+    "preco = [93.0, 102.0, 18.0, 41.0, 122.0, 14.0, 71.0, 48.0, 14.0, 144.0]\n",
+    "tabela_vendas = [('id', 'quantidade', 'preco', 'total')] + [\n",
+    "    (i, q, p, q * p) for i, q, p in zip(id, quantidade, preco)\n",
+    "]\n",
+    "print(tabela_vendas)\n",
+    "\n",
+    "# 9 código para contar quantas vezes cada estado aparece na seguinte lista:\n",
+    "estados = ['SP', 'ES', 'MG', 'MG', 'SP', 'MG', 'ES', 'ES', 'ES', 'SP', 'SP', 'MG', 'ES', 'SP', 'RJ',\n",
+    "           'MG', 'RJ', 'SP', 'MG', 'SP', 'ES', 'SP', 'MG']\n",
+    "contagem_estados = {estado: estados.count(estado) for estado in set(estados)}\n",
+    "print(contagem_estados)\n",
+    "\n",
+    "# 10 código para agrupar os funcionários por estado e somar o número de funcionários em cada estado:\n",
+    "funcionarios = [('SP', 16), ('ES', 8), ('MG', 9), ('MG', 6), ('SP', 10), ('MG', 4), ('ES', 9), ('ES', 7),\n",
+    "                ('ES', 12), ('SP', 7), ('SP', 11), ('MG', 8), ('ES', 8), ('SP', 9), ('RJ', 13), ('MG', 5),\n",
+    "                ('RJ', 9), ('SP', 12), ('MG', 10), ('SP', 7), ('ES', 14), ('SP', 10), ('MG', 12)]\n",
+    "agrupados = {estado: [n for e, n in funcionarios if e == estado] for estado, _ in funcionarios}\n",
+    "soma_por_estado = {estado: sum(valores) for estado, valores in agrupados.items()}\n",
+    "print(agrupados)\n",
+    "print(soma_por_estado)"
    ]
   }
  ],
