excercise commit message Add examples of using zip with unpacking, creating tuples from a flat list, and raising exceptions

--- a/Data Science/grafico_bibliotecas_com_python/funcao_estrutura_exception.ipynb
+++ b/Data Science/grafico_bibliotecas_com_python/funcao_estrutura_exception.ipynb
@@ -420,21 +420,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "113718b6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Henrique', 'Maria', 'João']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Lista de Listas\n",
     "notas_turma_ex = ['Henrique', 8.0, 9.0, 10.0, 'Maria', 7.5, 8.5, 9.0, 'João', 6.0, 5.5, 7.0]\n",
@@ -456,23 +445,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b27d3486",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Henrique', 8.0, 9.0, 10.0),\n",
-       " ('Maria', 7.5, 8.5, 9.0),\n",
-       " ('João', 6.0, 5.5, 7.0)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#lista de tuplas\n",
     "notas_turma_ex_2 = ['Henrique', 8.0, 9.0, 10.0, 'Maria', 7.5, 8.5, 9.0, 'João', 6.0, 5.5, 7.0]\n",
@@ -484,23 +460,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0194aa81",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Henrique', 8.0, 9.0, 10.0),\n",
-       " ('Maria', 7.5, 8.5, 9.0),\n",
-       " ('João', 6.0, 5.5, 7.0)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#List comprehension\n",
     "notas_turma_ex_3 = ['Henrique', 8.0, 9.0, 10.0, 'Maria', 7.5, 8.5, 9.0, 'João', 6.0, 5.5, 7.0]\n",
@@ -510,19 +473,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9485cf51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IDs =  ['J392', 'M890', 'J681', 'C325', 'A49']\n",
-      "Nomes =  ['João', 'Maria', 'José', 'Claúdia', 'Ana']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "id = [1, 2, 3, 4, 5]\n",
     "regiao = [\"Norte\", \"Nordeste\", \"Sudeste\", \"Centro-Oeste\", \"Sul\"]\n",
@@ -542,35 +496,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4ba05092",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Notas': [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]], 'Media Final': [9.0, 7.3, 5.8, 6.7, 8.5], 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Notas': [[8.0, 9.0, 10.0],\n",
-       "  [9.0, 7.0, 6.0],\n",
-       "  [3.4, 7.0, 7.0],\n",
-       "  [5.5, 6.6, 8.0],\n",
-       "  [6.0, 10.0, 9.5]],\n",
-       " 'Media Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
-       " 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado'],\n",
-       " 'Estudante': ['João', 'Maria', 'José', 'Cláudia', 'Ana']}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Criar dicionário a partir da lista de dados dos estudantes\n",
     "lista_completa = [[('João', 'J720'), ('Maria', 'M205'), ('José', 'J371'), ('Cláudia', 'C546'), ('Ana', 'A347')],\n",
@@ -663,6 +592,245 @@
     "soma_por_estado = {estado: sum(valores) for estado, valores in agrupados.items()}\n",
     "print(agrupados)\n",
     "print(soma_por_estado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecf5b617",
+   "metadata": {},
+   "source": [
+    "Exceções"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fddcd1cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrada não é um número inteiro. Encerrando.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try and except\n",
+    "while True:\n",
+    "    try:\n",
+    "        entrada = input(\"Digite um número inteiro: \")\n",
+    "        numero = int(entrada)\n",
+    "        print(f\"Você digitou o número {numero}. Continue digitando...\")\n",
+    "    except ValueError:\n",
+    "        # Se for string ou char, finaliza\n",
+    "        print(\"Entrada não é um número inteiro. Encerrando.\")\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f012a62c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A média anual de João foi: 9.0\n",
+      "Programa finalizado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "notas = {'João': [8.0, 9.0, 10.0], 'Maria': [7.5, 8.5, 9.0], 'Rodrigo': [6.0, 5.5, 7.0]}\n",
+    "\n",
+    "try:\n",
+    "    nome = input(\"Digite o nome do estudante para calcular a média: \")\n",
+    "    media = sum(notas[nome]) / len(notas[nome])\n",
+    "except KeyError:\n",
+    "    print(f\"O nome '{nome}' não foi encontrado na lista de estudantes.\")\n",
+    "else:\n",
+    "    print(f\"A média anual de {nome} foi: {media}\")\n",
+    "finally:\n",
+    "    print(\"Programa finalizado.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7510adb7",
+   "metadata": {},
+   "source": [
+    "Raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "66f95dd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Raise\n",
+    "\n",
+    "def media(lista: list=[0]) -> float:\n",
+    "    calculo = sum(lista) / len(lista)\n",
+    "    \n",
+    "    if len(lista) < 4:\n",
+    "        raise ValueError(\"A lista de notas não pode ser menor que 4.\")\n",
+    "    return calculo\n",
+    "print(media([8.0, 9.0, 10.0, 7.0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba9f7164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercício 1: Divisão de dois números float com tratamento de erro\n",
+    "try:\n",
+    "    num1 = float(input(\"Digite o primeiro número: \"))\n",
+    "    num2 = float(input(\"Digite o segundo número: \"))\n",
+    "    resultado = num1 / num2\n",
+    "    print(f\"O resultado da divisão é: {resultado}\")\n",
+    "except ValueError:\n",
+    "    print(\"Erro: ValueError - Um ou ambos os valores digitados não são números válidos.\")\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Erro: ZeroDivisionError - Não é possível dividir por zero.\")\n",
+    "\n",
+    "# Exercício 2: Busca em dicionário com tratamento de KeyError\n",
+    "idades = {'Júlia': 16, 'Carol': 23, 'Alberto': 19, 'Roberta': 17}\n",
+    "try:\n",
+    "    chave = input(\"Digite o nome para buscar a idade: \")\n",
+    "    valor = idades[chave]\n",
+    "    print(f\"A idade de {chave} é {valor}\")\n",
+    "except KeyError:\n",
+    "    print(\"Nome não encontrado\")\n",
+    "\n",
+    "# Exercício 3: Converter lista para float\n",
+    "def converter_para_float(lista):\n",
+    "    try:\n",
+    "        lista_convertida = [float(item) for item in lista]\n",
+    "        return lista_convertida\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Erro: ValueError - {e}\")\n",
+    "        return None\n",
+    "    except TypeError as e:\n",
+    "        print(f\"Erro: TypeError - {e}\")\n",
+    "        return None\n",
+    "    finally:\n",
+    "        print(\"Fim da execução da função\")\n",
+    "\n",
+    "# Exercício 4: Agregar listas com tratamento de erro\n",
+    "def agregar_listas(lista1, lista2):\n",
+    "    try:\n",
+    "        if len(lista1) != len(lista2):\n",
+    "            raise IndexError(\"A quantidade de elementos em cada lista é diferente.\")\n",
+    "        resultado = [(lista1[i], lista2[i], lista1[i] + lista2[i]) for i in range(len(lista1))]\n",
+    "        return resultado\n",
+    "    except TypeError as e:\n",
+    "        print(f\"Erro: TypeError - Valores incompatíveis para soma: {e}\")\n",
+    "        return None\n",
+    "    except IndexError as e:\n",
+    "        print(f\"Erro: IndexError - {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# Exercício 5: Contabilizar pontuações\n",
+    "def calcular_notas(gabarito, testes):\n",
+    "    notas = []\n",
+    "    for teste in testes:\n",
+    "        for alternativa in teste:\n",
+    "            if alternativa not in ['A', 'B', 'C', 'D']:\n",
+    "                raise ValueError(f\"A alternativa {alternativa} não é uma opção de alternativa válida\")\n",
+    "        nota = sum([1 for i in range(len(gabarito)) if teste[i] == gabarito[i]])\n",
+    "        notas.append(nota)\n",
+    "    return notas\n",
+    "\n",
+    "gabarito = ['D', 'A', 'B', 'C', 'A']\n",
+    "testes_sem_ex = [['D', 'A', 'B', 'C', 'A'], ['C', 'A', 'A', 'C', 'A'], ['D', 'B', 'A', 'C', 'A']]\n",
+    "testes_com_ex = [['D', 'A', 'B', 'C', 'A'], ['C', 'A', 'A', 'E', 'A'], ['D', 'B', 'A', 'C', 'A']]\n",
+    "\n",
+    "try:\n",
+    "    print(\"Notas sem exceção:\", calcular_notas(gabarito, testes_sem_ex))\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "\n",
+    "try:\n",
+    "    print(\"Notas com exceção:\", calcular_notas(gabarito, testes_com_ex))\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "\n",
+    "# Exercício 6: Verificar pontuações em palavras\n",
+    "def verificar_pontuacao(lista_palavras):\n",
+    "    for palavra in lista_palavras:\n",
+    "        if ',' in palavra or '.' in palavra or '!' in palavra or '?' in palavra:\n",
+    "            raise ValueError(f'O texto apresenta pontuações na palavra \"{palavra}\".')\n",
+    "    print(\"Texto validado com sucesso!\")\n",
+    "\n",
+    "lista_tratada = ['Python', 'é', 'uma', 'linguagem', 'de', 'programação', 'poderosa', 'versátil',\n",
+    "                  'e', 'fácil', 'de', 'aprender', 'utilizada', 'em', 'diversos', 'campos', 'desde',\n",
+    "                  'análise', 'de', 'dados', 'até', 'inteligência', 'artificial']\n",
+    "\n",
+    "lista_nao_tratada = ['Python', 'é', 'uma', 'linguagem', 'de', 'programação', 'poderosa,', 'versátil',\n",
+    "                  'e', 'fácil,', 'de', 'aprender', 'utilizada', 'em', 'diversos', 'campos,', 'desde',\n",
+    "                  'análise', 'de', 'dados', 'até', 'inteligência', 'artificial!']\n",
+    "\n",
+    "try:\n",
+    "    verificar_pontuacao(lista_tratada)\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "\n",
+    "try:\n",
+    "    verificar_pontuacao(lista_nao_tratada)\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "\n",
+    "# Exercício 7: Dividir colunas com tratamento de erro\n",
+    "def divide_colunas(pressoes, temperaturas):\n",
+    "    try:\n",
+    "        if len(pressoes) != len(temperaturas):\n",
+    "            raise ValueError(\"As listas têm tamanhos diferentes.\")\n",
+    "        \n",
+    "        resultado = []\n",
+    "        for i in range(len(pressoes)):\n",
+    "            if temperaturas[i] == 0:\n",
+    "                raise ZeroDivisionError(f\"Divisão por zero detectada na posição {i}.\")\n",
+    "            resultado.append(pressoes[i] / temperaturas[i])\n",
+    "        \n",
+    "        return resultado\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Erro: ValueError - {e}\")\n",
+    "        return None\n",
+    "    except ZeroDivisionError as e:\n",
+    "        print(f\"Erro: ZeroDivisionError - {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# Teste sem exceção\n",
+    "pressoes = [100, 120, 140, 160, 180]\n",
+    "temperaturas = [20, 25, 30, 35, 40]\n",
+    "print(\"Resultado sem exceção:\", divide_colunas(pressoes, temperaturas))\n",
+    "\n",
+    "# Teste com ZeroDivisionError\n",
+    "pressoes = [60, 120, 140, 160, 180]\n",
+    "temperaturas = [0, 25, 30, 35, 40]\n",
+    "print(\"Resultado com ZeroDivisionError:\", divide_colunas(pressoes, temperaturas))\n",
+    "\n",
+    "# Teste com ValueError\n",
+    "pressoes = [100, 120, 140, 160]\n",
+    "temperaturas = [20, 25, 30, 35, 40]\n",
+    "print(\"Resultado com ValueError:\", divide_colunas(pressoes, temperaturas))"
    ]
   }
  ],
