começo de estatstica com python

--- a/Data Science/funcao_estrutura_exception.ipynb
+++ b/Data Science/funcao_estrutura_exception.ipynb
@@ -694,10 +694,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ba9f7164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O resultado da divisão é: 1.2857142857142858\n",
+      "Nome não encontrado\n",
+      "Notas sem exceção: [5, 3, 3]\n",
+      "A alternativa E não é uma opção de alternativa válida\n",
+      "Texto validado com sucesso!\n",
+      "O texto apresenta pontuações na palavra \"poderosa,\".\n",
+      "Resultado sem exceção: [5.0, 4.8, 4.666666666666667, 4.571428571428571, 4.5]\n",
+      "Erro: ZeroDivisionError - Divisão por zero detectada na posição 0.\n",
+      "Resultado com ZeroDivisionError: None\n",
+      "Erro: ValueError - As listas têm tamanhos diferentes.\n",
+      "Resultado com ValueError: None\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 1: Divisão de dois números float com tratamento de erro\n",
     "try:\n",
